- Improve support for parallel test execution
- Don't install private Module::Install extension. Thanks to Paul Howarth
  <paul@city-fan.org> for the bug report in another module.
  https://rt.cpan.org/Ticket/Update.html?id=103482
- Clarify licensing terms
- Move verbose testing to a private module, and implement it in a way that
  doesn't require editing the Makefile after it is generated.

Version 1.4204: Sun Apr 12 2015
- Enable verbose testing for CPAN-testers
- Consolidate issue tracking at rt.cpan.org
- Fix excessive warnings about signal handlers. Thanks to "festinare" for the
  patch. https://code.google.com/p/cgi-cache/issues/detail?id=1

Version 1.4203: Sat Apr 4 2015
- Make test script more compatible with automated testing
- Improve the speed test and make it separate from the normal functional
  tests. Thanks to Gregor Hermann <gregoa@cpan.org> for observing that the
  speed test was flaky.

Version 1.4202: Sun Mar 22 2015
- Moved code to github
- Added POD test

Version 1.4201 Tue Jul 15 2008:
- Updated to the latest version of Module::Install
- Removed auto-install for better compatibility with CPAN and others
- Cleaned up the contradictory licensing. (Now just GPL instead of GPL in one
	place, Perl artistic in another, "all rights reserved" in yet another.)
- Moved hosting to Google Code

Version 1.4200 Mon Mar 14 2005:
- Fixed a bug where the user-specified max cache size was not being honored,
  and an unbounded cache was used instead. (Thanks to Christoph C. Cemper
  <cgicache@cemper.com> for finding the bug and providing the fix.)
- Fixed a bug where the default_expires_in time interval was not being set
  correctly.
- Changed the default behavior of default_expires_in so that cache entries
  never expire.

Version 1.4142:
- Fixed a bug in t/timed_tests.t that would be revealed by Perl 5.6.x. (Thanks
  to Sebastien Aperghis-Tramoni <saper@cpan.org> for the bug report and
  debugging assistance.)