@@ -14,9 +14,11 @@ $VERSION = sprintf "%d.%02d%02d", q/0.10.0/ =~ /(\d+)/g;
 
 sub Add_Test_Target
 {
-  my $self = shift;
-  my $target = shift;
-  my $test = shift;
+  my ($self, $target, $test) = @_;
+
+  # Tell Module::Install to include this, since we use it.
+  $self->perl_version('5.005');
+  $self->configure_requires('File::Slurp', 0);
 
   *main::MY::postamble = sub {
     return &Module::AutoInstall::postamble . <<EOF;
