@@ -6,6 +6,9 @@ Version 1.4205:
 - Clarify licensing terms
 - Move verbose testing to a private module, and implement it in a way that
   doesn't require editing the Makefile after it is generated.
+- Require File::Slurp instead of including it, to avoid potential problems
+  like this:
+  http://www.cpantesters.org/cpan/report/86a0145a-e52b-11e4-a1d1-8536eb4f9f07
 
 Version 1.4204: Sun Apr 12 2015
 - Enable verbose testing for CPAN-testers
